[CSS]: fixed Names column alignment.

--- a/css/table-data.css
+++ b/css/table-data.css
@@ -1,8 +1,5 @@
 .name
 {
-	text-align: justify;
-	align-items: justify;
-	justify-content: justify;
 	display: inline-block;
 	width: fit-content;
 	margin: 2px;
